# mc-protocal

./: README.md  modbus-rtu.c  modbus-tcp.c  modbus.h
libmc/: MIGRATION  Makefile  Makefile.am  Makefile.in  NEWS  README.rst  TODO  acinclude.m4  config.h  config.h.in  config.status  configure  configure.ac  libmc.pc  libmc.pc.in  libmc.spec  libmc.spec.in  libtool
libmc/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
libmc/doc/: Makefile  Makefile.am  Makefile.in  asciidoc.conf  libmodbus.7  libmodbus.html  libmodbus.txt  modbus_close.3  modbus_close.html  modbus_close.txt  modbus_connect.3  modbus_connect.html  modbus_connect.txt  modbus_flush.3  modbus_flush.html  modbus_flush.txt  modbus_free.3  modbus_free.html  modbus_free.txt  modbus_get_byte_from_bits.3  modbus_get_byte_from_bits.html  modbus_get_byte_from_bits.txt  modbus_get_byte_timeout.3  modbus_get_byte_timeout.html  modbus_get_byte_timeout.txt  modbus_get_float.3  modbus_get_float.html  modbus_get_float.txt  modbus_get_header_length.3  modbus_get_header_length.html  modbus_get_header_length.txt  modbus_get_response_timeout.3  modbus_get_response_timeout.html  modbus_get_response_timeout.txt  modbus_get_socket.3  modbus_get_socket.html  modbus_get_socket.txt  modbus_mapping_free.3  modbus_mapping_free.html  modbus_mapping_free.txt  (+99 more)
libmc/include/mc/: mc-rtu.h
libmc/src/: Makefile  Makefile.am  Makefile.in  libmc.la  mc-data.c  mc-data.lo  mc-private.h  mc-rtu-private.h  mc-rtu.c  mc-rtu.lo  mc-tcp-private.h  mc-tcp.c  mc-tcp.h  mc-tcp.lo  mc-version.h  mc-version.h.in  mc.c  mc.h  mc.lo
libmc/src/.deps/: mc-data.Plo  mc-rtu.Plo  mc-tcp.Plo  mc.Plo
libmc/src/.libs/: libmc.lai  libmc.so.5
libmc/tests/: Makefile  Makefile.am  Makefile.in  README  bandwidth-client.c  bandwidth-server-many-up  bandwidth-server-many-up.c  bandwidth-server-one  bandwidth-server-one.c  random-test-client.c  random-test-server.c  unit-test-client.c  unit-test-server.c  version.c
libmc/tests/.deps/: bandwidth-client.Po  bandwidth-server-many-up.Po  bandwidth-server-one.Po
libmc/tests/.libs/: bandwidth-server-many-up  bandwidth-server-one
src/: modbus-private.h  modbus-tcp-private.h  modbus.c
test/: test1.c  test2_write_registers.c
